fix: correcao de todos os warnings e code smells
fix: substituir Collectors.toList() por .toList() (Java 21)
- DashboardService: 3 ocorrencias corrigidas
- ReportService: 5 ocorrencias corrigidas
- ClientService: 1 ocorrencia corrigida

fix: deprecated new Locale(String, String) -> Locale.of() (Java 19+)
- DashboardService: 2 ocorrencias corrigidas

fix: converter @Autowired em campo para constructor injection
- OrderService: 3 campos (RequiredArgsConstructor)
- AuthorizationService: 1 campo
- SecurityFilter: 2 campos
- OrderController: 1 campo
- ServiceController: 1 campo
- ProductController: removido construtor manual, usando @RequiredArgsConstructor

fix: remover @Transactional dos controllers (pertence ao Service)
- OrderController: removido de update() e delete()
- ServiceController: removido de update() e delete()
- ProductController: removido de create(), update() e delete()

fix: SecurityFilter - remover try/catch morto apos correcao do TokenService
fix: SecurityFilter - usar startsWith+substring no lugar de replace para Bearer token
fix: AuthController - remover import nao utilizado (java.util.Objects)